# svelte-pyodide

./: .gitmodules  README.md  pyproject.toml  tutorial.md
front_office/svelte-app/: package-lock.json  package.json  rollup.config.js
front_office/svelte-app/public/ace-builds/: ace.d.ts
front_office/svelte-app/public/ace-builds/src-min/: ace.js  ext-modelist.js  ext-options.js  ext-prompt.js  ext-settings_menu.js  theme-Material-Theme.js  theme-clouds.js  theme-clouds_midnight.js  theme-cobalt.js  theme-dawn.js  theme-idle_fingers.js  theme-katzenmilch.js  theme-kr_theme.js  theme-kuroir.js  theme-merbivore.js  (+14 more)
front_office/svelte-app/public/ace-builds/src-min-noconflict/: ace.js  ext-modelist.js  ext-options.js  ext-prompt.js  ext-settings_menu.js  theme-Material-Theme.js  theme-clouds.js  theme-clouds_midnight.js  theme-cobalt.js  theme-dawn.js  theme-idle_fingers.js  theme-katzenmilch.js  theme-kr_theme.js  theme-kuroir.js  theme-merbivore.js  theme-merbivore_soft.js  theme-mono_industrial.js  theme-monokai.js  theme-pastel_on_dark.js  theme-solarized_dark.js  theme-solarized_light.js  theme-tomorrow.js  theme-tomorrow_night.js  theme-tomorrow_night_blue.js  theme-tomorrow_night_bright.js  theme-tomorrow_night_eighties.js  theme-twilight.js  theme-vibrant_ink.js  theme-xcode.js
front_office/svelte-app/src/: App.svelte  CodeBox.svelte  CodeBoxAsync.svelte  Test.svelte  Window.svelte  main.js  python-worker.js  worker-api.js  worker.js
front_office/svelte-app/src/theme/: _smui-theme.scss
templates/: item.html
tests/: test_wasmpython.py
wasmpython/: main.py
(+27 files in other folders)
